--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>REST торпеда</title>
+    <style>
+      html,
+      body #app{
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+      }
+
+    </style>
   </head>
   <body>
     <div id="app"></div>
